--- a/index.html
+++ b/index.html
@@ -1,183 +1,60 @@
-<html lang="en">
-  <head>
-    <style>
-    #quote-module {
-      font-family: sans-serif;
-      -webkit-font-smoothing: antialiased;
-      text-shadow: 1px 1px 1px 1px rgba(0,0,0,0.005);
-      border-top: 1px solid #eee;
-      width: 370px;
-      min-height: 300px;
-      margin-top: 10px;
-      margin-left: 10px;  
-    }
+<!doctype html>
+<head>
+  <meta charset="utf-8">
+  <title>Stock Application Demo</title>
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="author" content="SitePoint">
+  <link rel="stylesheet" href="./app.css">
+</head>
 
-    .separator {
-      border-top: 3px solid grey;
-      margin-top:8px;
-    }
+<div id="quote-module">
+  <div class="separator"></div>
 
-    .container-top {
-      height: 40px;
-      border: 1px solid;
-      padding-bottom: 10px;
-    }
+  <h1 class="company-name">Microsoft Corp</h1>
 
-    h1 {
-      font-family: "Times";
-      font-size: 23px;
-      font-variant-caps: all-small-caps;
-      font-weight: 100;
-      color: #222222;
-      line-height: 80%;
-    }
+  <div class="container large">
+    <span class="last-price"></span>
+    <span class="change"></span>
+    <span class="change-percent"></span>
+  </div>
 
-    .large {
-      height: 40px;
-      border-bottom: 1px solid #cccccc;
-    }
-
-    .last-price {
-      flex: 8;
-      font-family: "Times";
-      font-size: 1.5em;
-      font-weight: lighter;
-      padding-left: 3px;
-    }
-
-    .change, .change-percent {
-      flex: 1;
-      justify-content: flex-end;
-      font-family: "Times";
-      font-size: 1.1em;
-      padding-right: 2px;
-      color:#008000;
-    }
-
-    .container {
-      display: flex;
-      flex-wrap: wrap;
-    }
-
-    .data, .label {
-      flex: 1 0 40%;
-      border-bottom: 1px solid #cccccc;
-      height: 31px;
-      color: #000000;
-      display: flex;
-      align-items: center;
-    }
-
-    .change-data {
-      justify-content: flex-end;
-    }
-
-    .high-low span {
-      padding-left: 4px;
-    }
-
-    .label, .time-stamp {
-      font-size: 0.7em;
-      color: #666666;
-    }
-
-    .time-stamp {
-      text-align: right;
-      border-bottom: 1px solid #cccccc;
-      height: 24px;
-      margin-bottom: 7px;
-    }
-
-    .data {
-      justify-content: flex-end;
-      font-weight: bolder;
-      color: black;
-      font-size: 13px;
-    }
-
-    input {
-      flex: 1;
-      margin-right: 2px;
-      height:30px;
-      border: 1px solid #ccc;
-      border-radius: 5px 0 0 5px;
-      padding-left: 5px;
-    }
-
-    button, select {
-      flex: 1 0 40%;
-      height: 30px;
-      width: 50%;
-      margin-left: 2px;
-      font-size: 14px;
-      font-weight: 400 !important;
-      color: #222222;
-      border-radius: 5px;
-      background: linear-gradient(white, #e6e6e6);
-      border: 1px solid #ccc;
-      cursor: pointer;
-    }
-    
-    button:focus {
-      outline:0;
-    }
-
-    input:focus, select:focus {
-      outline: none;
-    }
-    </style>
-  </head>
-
-  <body>
-    <div id="quote-module">
-      <div class="separator"></div>
-
-      <h1 class="company-name">Microsoft Corp</h1>
-
-      <div class="container large">
-        <span class="last-price"></span>
-        <span class="change"></span>
-        <span class="change-percent"></span>
-      </div>
-
-      <div class="container">
-        <div class="label">Range</div>
-        <div class="data high-low">
-          <span class="high val"></span>
-          <span> - </span> 
-          <span class="low val"></span>
-        </div>
-        <div class="label">Open</div>
-        <div class="data opening"></div>
-        <div class="label">Volume</div>
-        <div class="data volume"></div>
-        <div class="label">Market Cap</div>
-        <div class="data market-cap"></div>
-      </div>
-
-      <p class="time-stamp">/p>
-
-      <div class="container">
-        <select class="symbol-value">
-          <option value="MSFT" selected disabled hidden>Microsoft Corp</option>
-          <option value = "BRKA">Berkshire Hathaway Inc</option>
-          <option value = "INFO">IHS Markit Ltd</option>
-          <option value = "F">Ford Motor Co</option>
-          <option value = "PLT">Plantronics Inc</option>
-          <option value = "BIG">Big Lots Inc</option>
-          <option value = "AME">Ametek Inc</option>
-          <option value = "JWN">Nordstrom Inc</option>
-          <option value = "CVS">CVS Health Corp</option>
-          <option value = "MS">Morgan Stanley</option>
-          <option value = "MET">Metlife Inc</option>
-          <option value = "IVD">Invalid Company Inc</option>
-          <option value = "RND">Random Company Inc</option>
-        </select>
-        <button type="button" class="btn-get-symbol-value" onclick="getSymbolValue()">Get New Quote</button>
-      </div>
+  <div class="container">
+    <div class="label">Range</div>
+    <div class="data high-low">
+      <span class="high val"></span>
+      <span> - </span> 
+      <span class="low val"></span>
     </div>
+    <div class="label">Open</div>
+    <div class="data opening"></div>
+    <div class="label">Volume</div>
+    <div class="data volume"></div>
+    <div class="label">Market Cap</div>
+    <div class="data market-cap"></div>
+  </div>
 
-    <script src="app.js"></script>
+  <p class="time-stamp">/p>
 
-  </body>
+  <div class="container">
+    <select class="symbol-value">
+      <option value="MSFT" selected disabled hidden>Microsoft Corp</option>
+      <option value = "BRKA">Berkshire Hathaway Inc</option>
+      <option value = "INFO">IHS Markit Ltd</option>
+      <option value = "F">Ford Motor Co</option>
+      <option value = "PLT">Plantronics Inc</option>
+      <option value = "BIG">Big Lots Inc</option>
+      <option value = "AME">Ametek Inc</option>
+      <option value = "JWN">Nordstrom Inc</option>
+      <option value = "CVS">CVS Health Corp</option>
+      <option value = "MS">Morgan Stanley</option>
+      <option value = "MET">Metlife Inc</option>
+      <option value = "IVD">Invalid Company Inc</option>
+      <option value = "RND">Random Company Inc</option>
+    </select>
+    <button type="button" class="get-value">Get New Quote</button>
+  </div>
+</div>
+<body>
+  <script type="module" src="./app.js"></script>
+</body>
 </html>
