chore: Remove the hidden value from the top index on the select element

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <div class="container">
     <select class="symbol-value">
-      <option value="MSFT" selected disabled hidden>Microsoft Corp</option>
+      <option value="MSFT" selected>Microsoft Corp</option>
       <option value = "BRKA">Berkshire Hathaway Inc</option>
       <option value = "INFO">IHS Markit Ltd</option>
       <option value = "F">Ford Motor Co</option>
